@startuml
title ChangeScout

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam nodesep 35
skinparam ranksep 40
top to bottom direction

hide empty members

package "ui.viewmodel" {
  class ViewModelRadarProductos {
    - observarRadarProductosUseCase: ObservarRadarProductosUseCase
    + onEvent(event)
  }

  class ViewModelFormularioProducto {
    - guardarProductoImportadoUseCase: GuardarProductoImportadoUseCase
    + onEvent(event)
  }

  class ViewModelDetalleProducto {
    - observarDetalleProductoUseCase: ObservarDetalleProductoUseCase
    - observarUltimaEvaluacionUseCase: ObservarUltimaEvaluacionUseCase
    - evaluarTendenciaProductoUseCase: EvaluarTendenciaProductoUseCase
    + onEvent(event)
  }
}

package "domain.usecase" {
  class GuardarProductoImportadoUseCase {
    - repositorioProducto: RepositorioProductoImportado
    + invoke(producto: ProductoImportado): Long
  }

  class ObservarRadarProductosUseCase {
    - repositorioProducto: RepositorioProductoImportado
    - repositorioEvaluacion: RepositorioEvaluacionComercial
    + invoke(): Flow<List<ProductoRadarItem>>
  }

  class ObservarDetalleProductoUseCase {
    - repositorioProducto: RepositorioProductoImportado
    + invoke(productoId: Long): Flow<ProductoImportado?>
  }

  class ObservarUltimaEvaluacionUseCase {
    - repositorioEvaluacion: RepositorioEvaluacionComercial
    + invoke(productoId: Long): Flow<EvaluacionComercial?>
  }

  class EvaluarTendenciaProductoUseCase {
    - repositorioProducto: RepositorioProductoImportado
    - repositorioEvaluacion: RepositorioEvaluacionComercial
    - proveedorTipoCambio: ProveedorTipoCambio
    - proveedorMarketplace: ProveedorMarketplace
    - proveedorFiltroNlp: ProveedorFiltroNlp
    + invoke(productoId: Long): EvaluacionComercial
  }
}

package "domain.repository" {
  interface RepositorioProductoImportado {
    + observarTodos(): Flow<List<ProductoImportado>>
    + observarPorId(productoId: Long): Flow<ProductoImportado?>
    + obtenerPorId(productoId: Long): ProductoImportado?
    + upsert(producto: ProductoImportado): Long
    + eliminar(productoId: Long)
  }

  interface RepositorioEvaluacionComercial {
    + observarUltimo(productoId: Long): Flow<EvaluacionComercial?>
    + observarUltimosDeTodos(): Flow<List<EvaluacionComercial>>
    + obtenerHistorial(productoId: Long, limite: Int): List<EvaluacionComercial>
    + guardarEvaluacion(evaluacion: EvaluacionComercial)
  }

  interface ProveedorTipoCambio {
    + nombreProveedor: String
    + obtenerTasaVentaUsdPen(): CotizacionTipoCambio
  }

  interface ProveedorMarketplace {
    + nombreProveedor: String
    + buscar(query: String, limit: Int): List<PublicacionMercado>
  }

  interface ProveedorFiltroNlp {
    + nombreProveedor: String
    + filtrar(publicaciones: List<PublicacionMercado>, producto: ProductoImportado): ResultadoFiltroNlp
  }
}

package "domain.model" {
  class ProductoRadarItem {
    + producto: ProductoImportado
    + ultimaEvaluacion: EvaluacionComercial?
  }

  class ProductoImportado {
    + id: Long
    + nombre: String
    + queryCompetencia: String
    + componentesCosto: ComponentesCostoImportacion
    + cantidadDisponible: Int
    + notas: String?
  }

  class ComponentesCostoImportacion {
    + precioFobUsd: Double
    + fleteUsd: Double
    + seguroUsd: Double
    + arancelesUsd: Double
    + otrosCargosUsd: Double
  }

  class EvaluacionComercial {
    + evaluacionId: Long
    + productoId: Long
    + costoTotalUsd: Double?
    + costoTotalPen: Double?
    + precioPromedioRealPen: Double?
    + margenNetoPct: Double?
    + veredicto: String?
    + estadoEvaluacion: String
    + evaluadoEn: Instant
    + metricasTendencia: MetricasTendencia?
  }

  class MetricasTendencia {
    + erosionPrecioLocalPct: Double?
    + variacionCompetidoresPct: Double?
    + presionCambiariaPct: Double?
    + ventanaHistoricaDias: Int
  }

  class CotizacionTipoCambio {
    + tasaVentaUsdPen: Double
    + nombreFuente: String
    + obtenidoEn: Instant
  }

  class PublicacionMercado {
    + publicacionId: String
    + titulo: String
    + precio: Double
    + moneda: String
    + nombreFuente: String
  }

  class PublicacionComparable {
    + publicacionOrigenId: String
    + tituloNormalizado: String
    + precioPen: Double
  }

  class ResultadoFiltroNlp {
    + publicacionesValidas: List<PublicacionComparable>
    + precioPromedioRealPen: Double?
    + competidoresValidos: Int
    + trazaProveedor: String
  }
}

ViewModelRadarProductos --> ObservarRadarProductosUseCase
ViewModelFormularioProducto --> GuardarProductoImportadoUseCase
ViewModelDetalleProducto --> ObservarDetalleProductoUseCase
ViewModelDetalleProducto --> ObservarUltimaEvaluacionUseCase
ViewModelDetalleProducto --> EvaluarTendenciaProductoUseCase

GuardarProductoImportadoUseCase --> RepositorioProductoImportado
ObservarRadarProductosUseCase --> RepositorioProductoImportado
ObservarRadarProductosUseCase --> RepositorioEvaluacionComercial
ObservarDetalleProductoUseCase --> RepositorioProductoImportado
ObservarUltimaEvaluacionUseCase --> RepositorioEvaluacionComercial
EvaluarTendenciaProductoUseCase --> RepositorioProductoImportado
EvaluarTendenciaProductoUseCase --> RepositorioEvaluacionComercial
EvaluarTendenciaProductoUseCase --> ProveedorTipoCambio
EvaluarTendenciaProductoUseCase --> ProveedorMarketplace
EvaluarTendenciaProductoUseCase --> ProveedorFiltroNlp
EvaluarTendenciaProductoUseCase ..> CotizacionTipoCambio
EvaluarTendenciaProductoUseCase ..> PublicacionMercado
EvaluarTendenciaProductoUseCase ..> ResultadoFiltroNlp
EvaluarTendenciaProductoUseCase ..> EvaluacionComercial

ProductoRadarItem --> ProductoImportado
ProductoRadarItem --> EvaluacionComercial
ProductoImportado *-- ComponentesCostoImportacion
EvaluacionComercial --> ProductoImportado
EvaluacionComercial *-- MetricasTendencia
ResultadoFiltroNlp *-- PublicacionComparable
PublicacionMercado ..> PublicacionComparable

ProveedorTipoCambio ..> CotizacionTipoCambio
ProveedorMarketplace ..> PublicacionMercado
ProveedorFiltroNlp ..> ResultadoFiltroNlp
ProveedorFiltroNlp ..> PublicacionMercado

@enduml
